css/style.css
* {
    font-family: HeliosCondC, sans-serif;
    padding: 0;
    margin: 0;
}
/* COMMON UTILITES*/
.bold {
    font-weight: bold;
}
.normal {
    font-weight: normal;
}
.light {
    font-weight: 100;
}
.container {
    max-width: 1200px;
    margin: 0 auto;
}
.clear {
    clear: both;
}
.f-left {
    float: left;
}
.f-right {
    float: right;
}
.inline-block {
    display: inline-block;
}
.arrow {
    cursor: pointer;
    position: relative;
}
.arrow.left {
    background: url('../img/left.png') no-repeat center center;
}
.arrow.left:hover {
    background-image: url('../img/lefth.png');
}
.arrow.right {
    background: url('../img/right.png') no-repeat center center;
}
.arrow.right:hover {
    background-image: url('../img/righth.png');
}
/* header */
#header {
    margin-top: 20px;
}
#header .header-line {
    font-size: 20px;
}
#header .email {
    color: #e84042;
    font-size: 30px;
    text-decoration: underline;
}
#header .email-icon {
    position: relative;
    top: 21px;
    margin-left: 15px;
    margin-right: 20px;
}
#header .mail-text {
    margin-left: 35px;
}
@media (max-width: 1125px) {
    #header .header-line {
        display: block;
        float: none;
        clear: both;
        text-align: center;
    }
    #header .logo {
        display: block;
        float: none;
        text-align: center;
    }
}

/* main block */

#main {
    background-image: url('../img/mainbg.jpg');
    background-size: cover;
    min-height: 624px;
}
#main .container {
    position: relative;
}
#main h1 {
    font-size: 48px;
    text-transform: uppercase;
    text-align: center;

}
#main h2 {
    font-size: 30px;
    font-weight: normal;
    text-align: center;
    width: 684px;
    margin: 15px auto 0;
}
#main h2 span {
    font-size: 38px;
    color: #e84042;
    font-weight: bold;
    text-transform: uppercase;
}
#main form {
    width: 610px;
    border: 1px solid #ffb337;
    padding: 30px 30px 10px;
    background-color: rgba(255,255,255,0.8);
    margin: 15px auto 0;
}
#main form p {
    font-size: 14px;
    text-align: center;
    margin-top: 10px;
}
#main form textarea {
    margin-bottom: 15px;
}
#main form input, #main form textarea{
    border: 1px solid #bababa;
    font-size: 16px;
    padding: 17px;
}
#main form input[type=file]{
    display: none;
}
#main form .row-3 {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 15px;
}
#main form textarea {
    margin-top: 15px;
    width: calc(100% - 36px);
    height: 70px;
    resize: none;
}
#mainGirl {
    top: 50px;
    position: absolute;
}
#main label, #main button[type=submit] {
    padding: 10px;
    background-color: #ffb337;
    border: 0;
    font-size: 17px;
    font-weight: bold;
    cursor: pointer;
}
#main label:hover, #main button[type=submit]:hover {
    background-color: #f09c3c;
}
#main button[type=submit] {
    font-size: 20px;
}
#main label div {
    padding-right: 15px;
    padding-left: 15px;
    margin-right: 15px;
    margin-top: 7px;
    float: left;
    border-right: 1px solid white;
}
@media (max-width: 1125px) {
    #mainGirl {
        display: none;
    }
    #main form {
        max-width: 610px;
    }
}
/* new supplier */
#newSupplier {
    background-image: url('../img/newsupplier.jpg');
    background-size: cover;
    padding: 50px 0;
}
#newSupplier h1 {
    font-weight: bold;
    font-size: 40px;
    color: #00284f;
    text-align: center;
}
#newSupplier h2 {
    color: #e84042;
    font-size: 32px;
    text-transform: uppercase;
    text-align: center;
    margin-top: 50px;
}
#newSupplier p {
    font-size: 30px;
    text-align: center;
    margin-top: 20px;
    margin-bottom: 20px;
}
#newSupplier .row-3 {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 30px;
}
#newSupplier .row-3 div {
    background-size: contain;
    height: 339px;
    background-repeat: no-repeat;
    text-align: center;
    padding: 0 60px;
}
#newSupplier .row-3 div span {
    color: #fff;
    text-align: center;
    font-size: 30px;
    position: relative;
    top: 240px;
}
#newSupplier #ns1 {
    background-image: url('../img/1nsblock.png');
}
#newSupplier #ns2 {
    background-image: url('../img/2nsblock.png');
}
#newSupplier #ns3 {
    background-image: url('../img/3nsblock.png');
}
/* own production block */
#ownProduct {
    padding: 50px 0;
    background-image: url('../img/ownproductbg.jpg');
    background-size: cover;
}
#ownProduct h1 {
    font-size: 48px;
    font-weight: bold;
    text-align: center;
    color: #e84042;
    margin-bottom: 20px;
}
#ownProduct h2 {
    font-size: 36px;
    font-weight: bold;
    color: #00284f;
    text-align: center;
    margin-bottom: 20px;
}
#ownProduct .row-4 {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 58px;
    margin-top: 40px;
}
#ownProduct .row-4 div {
    height: 365px;
    border: 1px solid #00284f;
}
#ownProduct .row-4.left-img img {
    position: relative;
    top: -15px;
    left: -15px;
}
#ownProduct .row-4.right-img img {
    position: relative;
    top: -15px;
    left: 15px;
}
#ownProduct p {
    text-align: center;
    font-size: 30px;
    margin-bottom: 15px;
}
#ownProduct h4 {
    padding: 0 10px;
    font-size: 24px;
}
/* pluses */
#pluses {
    background: url('../img/plusesline.jpg') repeat-x;
    background-position: center center;
    margin-bottom: 30px;
}
#pluses .row-3 {
    text-align: center;
}
/*opora slider*/
#oporaSlider {
    padding: 50px 0;
    background-image: url('../img/oporasliderbg.jpg');
    background-size: cover;
}
#oporaSlider h1 {
    font-size: 48px;
    text-align: center;
    color: #00284f;
    margin-bottom:40px;
}
#oporaSlider h2 {
    font-size: 36px;
    font-weight: normal;
    color: #00284f;
    text-align: center;
    margin-bottom: 40px;
}

#oporaSlider .tabs {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 1px;
    border-bottom: 1px solid #00284f;
}
/* ... */

